{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 58,
  "lineage": "5b7a0c47-e05a-8b45-8a08-e57d21e0ba91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:listener-rule/app/crud-lb/26d488eabdf2eebe/4c4e13cc1286c8d2/7f7b92a575f193dc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:listener-rule/app/crud-lb/26d488eabdf2eebe/4c4e13cc1286c8d2/7f7b92a575f193dc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:listener/app/crud-lb/26d488eabdf2eebe/4c4e13cc1286c8d2",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.crud-lb",
            "aws_lb_listener.crud-listener",
            "aws_lb_target_group.crudtg",
            "aws_security_group.crudsg",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "crud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:046476296793:instance/i-07e2b851c68551904",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e2b851c68551904",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sairam",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06857b1ad41a90d14",
            "private_dns": "ip-172-31-36-27.us-east-2.compute.internal",
            "private_ip": "172.31.36.27",
            "public_dns": "ec2-18-219-22-142.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.22.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041b78d4200642707",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "crudsg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2b95b867",
            "tags": {
              "Name": "CRUD AppServer 0"
            },
            "tags_all": {
              "Name": "CRUD AppServer 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9de87df1eef8962"
            ]
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:046476296793:instance/i-0b585fd6c8141d99b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b585fd6c8141d99b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sairam",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edc5b364d79f5841",
            "private_dns": "ip-172-31-32-27.us-east-2.compute.internal",
            "private_ip": "172.31.32.27",
            "public_dns": "ec2-18-191-180-106.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.180.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5fce6de110b634e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "crudsg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2b95b867",
            "tags": {
              "Name": "CRUD AppServer 1"
            },
            "tags_all": {
              "Name": "CRUD AppServer 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9de87df1eef8962"
            ]
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:046476296793:instance/i-039606ff6e9b47966",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039606ff6e9b47966",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sairam",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00877d4f396a7dba8",
            "private_dns": "ip-172-31-36-60.us-east-2.compute.internal",
            "private_ip": "172.31.36.60",
            "public_dns": "ec2-3-129-9-222.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.9.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ef9e948abe1abf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "crudsg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2b95b867",
            "tags": {
              "Name": "CRUD AppServer 2"
            },
            "tags_all": {
              "Name": "CRUD AppServer 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9de87df1eef8962"
            ]
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "crud-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:loadbalancer/app/crud-lb/26d488eabdf2eebe",
            "arn_suffix": "app/crud-lb/26d488eabdf2eebe",
            "dns_name": "crud-lb-1480528592.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:loadbalancer/app/crud-lb/26d488eabdf2eebe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "crud-lb",
            "security_groups": [
              "sg-0d9de87df1eef8962"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2b95b867"
              },
              {
                "subnet_id": "subnet-ddad22b6"
              },
              {
                "subnet_id": "subnet-fe2de883"
              }
            ],
            "subnets": [
              "subnet-2b95b867",
              "subnet-ddad22b6",
              "subnet-fe2de883"
            ],
            "tags": {
              "Application": "CRUD AppServer"
            },
            "tags_all": {
              "Application": "CRUD AppServer"
            },
            "vpc_id": "vpc-207d1a4b",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.crudsg",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "crud-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:listener/app/crud-lb/26d488eabdf2eebe/4c4e13cc1286c8d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:listener/app/crud-lb/26d488eabdf2eebe/4c4e13cc1286c8d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:loadbalancer/app/crud-lb/26d488eabdf2eebe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.crud-lb",
            "aws_lb_target_group.crudtg",
            "aws_security_group.crudsg",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "crudtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
            "arn_suffix": "targetgroup/crudtg/1fe96d536af632ca",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "crudtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-207d1a4b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "crudtg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca-20210708173135416200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
            "target_id": "i-07e2b851c68551904"
          },
          "dependencies": [
            "aws_instance.crud",
            "aws_lb_target_group.crudtg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca-20210708173135485800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
            "target_id": "i-0b585fd6c8141d99b"
          },
          "dependencies": [
            "aws_instance.crud",
            "aws_lb_target_group.crudtg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca-20210708173135705800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:046476296793:targetgroup/crudtg/1fe96d536af632ca",
            "target_id": "i-039606ff6e9b47966"
          },
          "dependencies": [
            "aws_instance.crud",
            "aws_lb_target_group.crudtg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crudsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:046476296793:security-group/sg-0d9de87df1eef8962",
            "description": "security group for crud service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9de87df1eef8962",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Inbound Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "crudsg",
            "name_prefix": "",
            "owner_id": "046476296793",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-207d1a4b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_in_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Inbound Traffic",
            "from_port": 80,
            "id": "sgrule-1526095094",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d9de87df1eef8962",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.crudsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound Traffic",
            "from_port": 0,
            "id": "sgrule-331564617",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d9de87df1eef8962",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.crudsg"
          ]
        }
      ]
    }
  ]
}